<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/lead_close_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="6dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/ws_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:text="@string/user_form_guide"
            android:textColor="@color/ws_blue"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:hint="@string/user_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_phone_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:hint="@string/user_phone_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="13"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_email_tf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:hint="@string/user_email_label"
            app:boxStrokeErrorColor="#FF0000"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/lead_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/ws_yellow"
            android:text="@string/user_form_button"
            android:textColor="@color/ws_blue" />

    </LinearLayout>

</ScrollView>