<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ws_blue">

    <LinearLayout
        android:id="@+id/main_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/main_search"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_guide"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <SearchView
            android:id="@+id/main_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:iconifiedByDefault="false"
            android:background="@drawable/sv_background"
            android:queryHint="@string/cars_search_query"
            app:circularflow_radiusInDP="8dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top_bar"
        tools:listitem="@layout/item_cars" />

    <ProgressBar
        android:id="@+id/rv_loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/ws_yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top_bar" />

    <TextView
        android:id="@+id/rv_error"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cars_list_request_error"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top_bar" />

    <TextView
        android:id="@+id/rv_empty"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/cars_list_request_empty"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_top_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>